package org.arvinw.example7;

public class Chef {
    public void cook(){
        System.out.println("厨师进行烹饪");
    }
}
