package org.arvinw.example7;

public class Cleaner {

    public void clean(){
        System.out.println("收拾桌子");
    }
    public void wash(){
        System.out.println("洗碗");
    }
}
