package org.arvinw.example7;

public class Helper {

    public void cook(){
        System.out.println("下厨烹饪....");
    }
}
