package org.arvinw.example7;

public class VegVendor {

    public void purchase(){
        System.out.println("供应蔬菜.....");
    }
}
