package org.arvinw.example7;

public class Waiter {

    public void order(){
        System.out.println("服务员订台");
    }
    public void serve(){
        System.out.println("服务员服务");
    }
}
